# Intelix

./: .dccache  .gitignore  Makefile  alpha.py  readme.md  setup.cfg  static_file_analysis.py
.github/workflows/: main.yml
intelix_cli/: __init__.py  dynamic_file_command.py  static_file_command.py  static_url_command.py  vuln-test.py
intelix_commands/: __init__.py  static_file_command.py
src/: oauth_token.py  static_file_analysis.py  token.py
