[metadata]
name = Intelix CLI
version = 0.0.1
author = phil afable
maintainer = phil afable
url = https://github.com/pafable/intelix
description = scripts to interact with Sophos Intelix using CLI
license: MIT
platforms = any

[options]
packages = intelix_cli

[options.entry_points]
console_scripts = 
    intelix-static = intelix_cli.static_file_command:main
    intelix-dynamic = intelix_cli.dynamic_file_command:main
